# oda

./: .env.example  .gitignore  BRUKERGUIDE.md  CHANGELOG.md  QUICKSTART.md  README.md  ROADMAP.md  TECHNICAL_DOCS.md  TESTING_SUMMARY.md  USER_GUIDE.md  add_missing_budget_ingredients.py  browse_recipes.py  calculate_meal_cost.py  clear_cart_completely.py  complete_meal_workflow.py  demo_simple.py  demo_workflow.py  final_cleanup.py  find_budget_replacements.py  find_oda_recipes.py  find_recipes.py  find_weekly_recipes.py  open_dinner_bank.py  optimize_shopping_list.py  propose_meals_with_sides.py  propose_weekly_meals.py  pyproject.toml  server.py  setup.sh  suggest_office_lunch.py  test_system.py
Oppskrifter/Uke 1 - 2026/: BUDSJETT_KANDIDATER.txt  OPPSKRIFTER - 0 middager - Uke 1 - 2026.txt  OPPSKRIFTER - 4 BUDSJETT MIDDAGER - Uke 1.txt  OPPSKRIFTER - 4 middager - Uke 1 - 2026.txt
docs/: BUDGET_MEALS_GUIDE.md
src/: config.py
src/database/: __init__.py  db.py  models.py
src/kassal/: __init__.py  client.py  models.py
src/oda/: __init__.py  cart.py  deals.py  models.py  orders.py  recipes.py
src/optimizer/: __init__.py  meal_optimizer.py
